# code-names-bot-corpus-creator

./: .gitignore  README.rst  compounds.txt  config.py  credentials.py  filtered_wordlist.txt  pyproject.toml  tasks.py  us_but_actually_gb.txt  wordlist.txt
code_names_bot_corpus_creator/caches/: oxford_cache.py  wiki_page_views_cache.py
code_names_bot_corpus_creator/download/: api_downloader.py  cache.py  caches.py
code_names_bot_corpus_creator/oxford_definitions_download/: download_lemma_definitions.py
code_names_bot_corpus_creator/oxford_entries_download/: create_filtered_lemmas_list.py  download_lemma_definitions.py  download_lemma_entries.py  download_lemma_sentences.py  setup_oxford_cache.py
code_names_bot_corpus_creator/oxford_filter_2/: download_lemma_definitions.py  download_lemma_sentences.py  oxford_filter_2.py
code_names_bot_corpus_creator/oxford_scraper/: indices_scraper.py  scrape_oxford_lemmas.py
code_names_bot_corpus_creator/wiki_filter_1/: download_api_wiki_page_views.py  wiki_filter_1.py
code_names_bot_corpus_creator/wiki_filter_2/: download_wiki_redirects_categories.py  tool.py  wiki_filter_2.py
code_names_bot_corpus_creator/wiki_filter_3/: download_api_wiki_page_views.py  wiki_filter_3.py
code_names_bot_corpus_creator/wiki_page_list_compiler/: compile_wiki_page_list.py
code_names_bot_corpus_creator/wiki_page_views_download/: create_filtered_wiki_pages_list.py  download_api_wiki_page_views.py  download_dump_wiki_page_views.py  download_wiki_page_views.py  download_wiki_redirects_categories.py  filter_by_dump_page_views.py  wiki_page_views_downloader.py
code_names_bot_corpus_creator/wiki_summaries_download/: download_wiki_summaries.py
code_names_bot_oxford_downloader/: create_filtered_wordlist.py  create_lemma_list.py  create_wordlist.py  download_definitions.py  downloader.py  extract_compounds.py  oxford_definitions.py  setup_cache.py  word_list_scraper.py
data/: filtered_wordlist.txt  missing_us_lemmas.txt
data/caches/: test.csv
lemma_lists/: wordnet_lemmas_1  wordnet_lemmas_2  wordnet_lemmas_3
manual_tests/: test_spacy.py  test_wiki_definition_formatter.py  test_wiki_labels_extractor.py  test_wiki_redirects.py  test_wiki_redirects_categories.py  test_wiki_variants_extractor.py
premium_wordlist_targets/: a.txt  d.txt  g.txt  k.txt  n.txt  o.txt  r.txt  t.txt  v.txt  w.txt  z.txt
premium_wordlist_targets_us/: f.txt  h.txt  i.txt  l.txt  s.txt  x.txt
premium_wordlist_targets_world/: a.txt  b.txt  e.txt  k.txt  l.txt  m.txt  o.txt  p.txt  q.txt  t.txt  v.txt  x.txt  z.txt
premium_wordlists/: ('0-9', '007').txt  ('h', "have-one's-heart-in").txt  ('h', 'h').txt  ('h', 'habsburg').txt  ('h', 'haiku').txt  ('h', 'hairpiece').txt  ('h', 'halyard').txt  ('h', 'hammer-away').txt  ('h', 'hand-dryer').txt  ('h', 'hang-in-there').txt  ('h', 'hard-line').txt  ('h', 'harefoot-harold').txt  ('h', 'hart-frederick-e.').txt  ('h', 'haymow').txt  ('h', 'he-who-lives-by-the-sword-dies-by-the-sword').txt  ('h', 'headstream').txt  ('h', 'healthspan').txt  ('h', 'heart-lung-machine').txt  ('h', 'heck').txt  ('h', 'helmer').txt  ('h', 'hematin').txt  ('h', 'hemo-').txt  ('h', 'herbalism').txt  ('h', 'herefordshire').txt  ('h', 'heterogametic').txt  ('h', 'hex-sign').txt  ('h', 'high-calorie').txt  ('h', 'high-five').txt  ('h', 'highest-ranking').txt  ('h', 'himmler-heinrich').txt  ('h', 'hip-pocket').txt  ('h', 'hired-gun').txt  ('h', 'hmm').txt  ('h', 'hobbs').txt  ('h', 'hofmann-hans').txt  ('h', 'holodeck').txt  ('h', 'home-leave').txt  ('h', 'homiliary').txt  ('h', 'homopteran').txt  ('h', 'honoris-causa').txt  (+1382 more)
premium_wordlists_us/: a|aaron's-rod.txt  a|acre-foot.txt  a|aedile.txt  a|aforesaid.txt  a|aim-high.txt  a|alewife.txt  a|algorithm.txt  a|angostura.txt  a|animal-rightist.txt  a|anti-feminist.txt  a|anting.txt  a|antwerpen.txt  a|apostle-spoon.txt  a|apprenticeship.txt  a|arched.txt  a|around-the-bend.txt  a|arrogance.txt  a|arthur.txt  a|as-clear-as-day.txt  a|asphyxiation.txt  a|atticism.txt  a|autopathography.txt  a|avail.txt  a|axeman.txt  b|baby-monitor.txt  b|backfist.txt  b|baddeleyite.txt  b|baker's-dozen.txt  b|balbriggan.txt  b|ballymena.txt  b|bamboo-rat.txt  b|barn-owl.txt  b|basal-cell-carcinoma.txt  b|basketball.txt  b|bastia.txt  b|beach-ball.txt  b|beam-splitter.txt  b|beaubourg-centre.txt  b|bee-fly.txt  b|belorussian.txt  (+504 more)
premium_wordlists_world/: a|-ably.txt  a|-as-pure-as-the-driven-snow.txt  a|a-fair-suck-of-the-sav.txt  a|abapically.txt  a|abraxas.txt  a|abscission-zone.txt  a|absolute-ceiling.txt  a|academian.txt  a|acanthopterygian.txt  a|acceder.txt  a|accepting-house.txt  a|accordion-like.txt  a|accrementition.txt  a|acedia.txt  a|acheron.txt  a|achromatic-lens.txt  a|acquirement.txt  a|acriflavine.txt  a|actiniform.txt  a|ad-bene-placitum.txt  a|adagietto.txt  a|adance.txt  a|add-oil.txt  a|adjar.txt  a|administrant.txt  a|admirer.txt  a|adoxal.txt  a|adventist.txt  a|advertency.txt  a|aerobic-respiration.txt  a|aeromagnetometer.txt  a|aerosol.txt  a|aesthesic.txt  a|afis.txt  a|afrikanderism.txt  a|after-wort.txt  a|against-the-law-.txt  a|age-grade.txt  a|agenbite.txt  a|agitator.txt  (+2349 more)
tests/: test_code_names_bot_oxford_downloader.py
tools/: estimate_download_cost.py  find_dictionary_duplicates.py  get_all_cached.py  get_cached_words_result.py  get_cross_references.py  get_derivatives.py  get_dump_wiki_page_views.py  get_duplicate_definitions.py  get_multi_def_words.py  get_oxford_definition.py  get_title_labels.py  get_wiki_page_views.py  get_word_freq.py  test_is_proper.py
unit_tests/: test_dict.py  test_wiki_entities.py  test_wiki_labels_extractor.py  test_wiki_variants_extractor.py
wordlists/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  (+5316 more)
(+2926 files in other folders)
