[tool.poetry]
name = "code-names-bot-oxford-downloader"
version = "0.1.0"
description = ""
authors = ["Nalu Zou <zonalu@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.7"
black = "^22.6.0"
isort = "^5.10.1"
tqdm = "^4.64.0"
wordfreq = "^3.0.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
format                  = "tasks:format"
setup                   = "tasks:setup"

get-word-freq           = "tools.get_word_freq:main"

create-lemma-list       = "code_names_bot_oxford_downloader.create_lemma_list:main"
downloader              = "code_names_bot_oxford_downloader.downloader:main"
create-wordlist         = "code_names_bot_oxford_downloader.create_wordlist:main"

word-list-scraper       = "code_names_bot_oxford_downloader.scraper.word_list_scraper:main"
scrape-words-us         = "code_names_bot_oxford_downloader.scraper.scrape_premium:scrape_words_us"
scrape-targets-us       = "code_names_bot_oxford_downloader.scraper.scrape_premium:scrape_targets_us"
scrape-words-world      = "code_names_bot_oxford_downloader.scraper.scrape_premium:scrape_words_world"
scrape-targets-world    = "code_names_bot_oxford_downloader.scraper.scrape_premium:scrape_targets_world"
setup-cache            = "code_names_bot_oxford_downloader.setup_cache:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
