[tool.poetry]
name = "code-names-bot-corpus-creator"
version = "0.1.0"
description = ""
authors = ["Nalu Zou <nalu.zou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.6.0"
isort = "^5.10.1"
tqdm = "^4.64.0"
wordfreq = "^3.0.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"
mysql-connector-python = "^8.0.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
format                          = "tasks:format"

get-word-freq                   = "tools.get_word_freq:main"
get-dump-wiki-page-views        = "tools.get_dump_wiki_page_views:main"
get-cached-words-result         = "tools.get_cached_words_result:main"
estimate-download-cost          = "tools.estimate_download_cost:main"

scrape-oxford-lemmas            = "code_names_bot_corpus_creator.oxford_scraper.scrape_oxford_lemmas:main"
compile-oxford-lemmas           = "code_names_bot_corpus_creator.oxford_scraper.compile_lemmas:main"

create-filtered-lemmas-list     = "code_names_bot_corpus_creator.oxford_entries_download.create_filtered_lemmas_list:main"
download-lemma-entries          = "code_names_bot_corpus_creator.oxford_entries_download.download_lemma_definitions:main"
download-lemma-sentences        = "code_names_bot_corpus_creator.oxford_entries_download.download_lemma_sentences:main"

download-dump-wiki-page-views   = "code_names_bot_corpus_creator.wiki_filter_1.download_dump_wiki_page_views:main"
wiki-filter-1                   = "code_names_bot_corpus_creator.wiki_filter_1.create_filtered_wiki_pages_list:main"

download-redirects-categories   = "code_names_bot_corpus_creator.wiki_filter_2.download_wiki_redirects_categories:main"
wiki-filter-2                   = "code_names_bot_corpus_creator.wiki_filter_2.wiki_filter_2:main"

download-api-wiki-page-views    = "code_names_bot_corpus_creator.wiki_page_views_download.download_api_wiki_page_views:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
