[tool.poetry]
name = "code-names-bot-dictionary-compiler"
version = "0.1.0"
description = ""
authors = ["Nalu Zou <nalu.zou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.6.0"
isort = "^5.10.1"
tqdm = "^4.64.0"
wordfreq = "^3.0.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"
mysql-connector-python = "^8.0.30"
PyYAML = "^6.0"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
format                          = "tasks:format"
setup                           = "tasks:setup"

get-word-freq                   = "tools.get_word_freq:main"
get-dump-wiki-page-views        = "tools.get_dump_wiki_page_views:main"
get-cached-words-result         = "tools.get_cached_words_result:main"
estimate-download-cost          = "tools.estimate_download_cost:main"
test-is-proper                  = "tools.test_is_proper:main"
find-dictionary-duplicates      = "tools.find_dictionary_duplicates:main"
get-title-labels                = "tools.get_title_labels:main"
get-all-semantic-classes        = "tools.get_all_semantic_classes:main"

test-dict                       = "unit_tests.test_dict:main"
test-wiki-variants              = "unit_tests.test_wiki_variants_extractor:main"

manual-test-spacy                      = "manual_tests.test_spacy:main"
manual-test-wiki-variants-extractor    = "manual_tests.test_wiki_variants_extractor:main"

scrape-oxford-lemmas            = "code_names_bot_dictionary_compiler.oxford_scraper.scrape_oxford_lemmas:main"
compile-oxford-lemmas           = "code_names_bot_dictionary_compiler.oxford_scraper.compile_lemmas:main"

oxford-filter-1                 = "code_names_bot_dictionary_compiler.oxford_filter_1.oxford_filter_1:main"

download-lemma-sentences        = "code_names_bot_dictionary_compiler.oxford_filter_2.download_lemma_sentences:main"
download-lemma-definitions      = "code_names_bot_dictionary_compiler.oxford_filter_2.download_lemma_definitions:main"
oxford-filter-2                 = "code_names_bot_dictionary_compiler.oxford_filter_2.oxford_filter_2:main"

download-dump-wiki-page-views   = "code_names_bot_dictionary_compiler.wiki_filter_1.download_dump_wiki_page_views:main"
wiki-filter-1                   = "code_names_bot_dictionary_compiler.wiki_filter_1.create_filtered_wiki_pages_list:main"

download-redirects-categories   = "code_names_bot_dictionary_compiler.wiki_filter_2.download_wiki_redirects_categories:main"
wiki-filter-2                   = "code_names_bot_dictionary_compiler.wiki_filter_2.wiki_filter_2:main"

download-api-wiki-page-views    = "code_names_bot_dictionary_compiler.wiki_filter_3.download_api_wiki_page_views:main"
wiki-filter-3                   = "code_names_bot_dictionary_compiler.wiki_filter_3.wiki_filter_3:main"

download-wiki-summaries         = "code_names_bot_dictionary_compiler.wiki_filter_4.download_wiki_summaries:main"
wiki-filter-4                   = "code_names_bot_dictionary_compiler.wiki_filter_4.wiki_filter_4:main"

compile-dictionary              = "code_names_bot_dictionary_compiler.dictionary_compiler.compile_dictionary:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
